--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-geopandas==0.14.4
-numpy==1.26.4
-matplotlib==3.7.2
-pandas==2.0.3
-folium==0.14.0
-mapclassify==2.6.0
+cython==3.1.2
+geopandas==1.1.1
+pandas==2.3.1
+numpy==2.3.1
+matplotlib==3.10.3
+folium==0.20.0
+mapclassify==2.10.0
