--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         root   /usr/share/nginx/html/pages;
-        index  main/elections.html;
+        index  elections/1867.html;
     }
 }
