--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -23,6 +23,7 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: Build
     runs-on: ubuntu-latest
+    environment: vulnerability-checks
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
