--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          lfs: true
 
       - name: Build an image from Dockerfile
         run: |
