Testing docker build and push workflow

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "add-docker-build-and-push--pipeline" ]
     tags:
       - '0.0.*'
 
