--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,10 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "add-docker-build-and-push--pipeline" ]
-    tags:
-      - '0.0.*'
+    branches: [ "main" ]
+    
+permissions:
+  contents: write
 
 jobs:
 
@@ -15,6 +16,51 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Check for existing tag on commit
+      id: existing_tag
+      run: |
+        TAG=$(git tag --points-at HEAD | head -n 1)
+        echo "tag=$TAG" >> $GITHUB_OUTPUT
+
+    - name: Get latest tag
+      id: latest_tag
+      if: steps.existing_tag.outputs.tag == ''
+      run: |
+        git fetch --tags
+        TAG=$(git tag --sort=-v:refname | head -n 1)
+        echo "latest=$TAG" >> $GITHUB_OUTPUT
+
+    - name: Bump patch version
+      id: bump
+      if: steps.existing_tag.outputs.tag == ''
+      run: |
+        VERSION=${{ steps.latest_tag.outputs.latest }}
+        if [ -z "$VERSION" ]; then
+          NEW_VERSION="0.0.1"
+        else
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          PATCH=$((PATCH + 1))
+          NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+        fi
+        echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Create and push git tag
+      if: steps.existing_tag.outputs.tag == ''
+      run: |
+        git tag ${{ steps.bump.outputs.version }}
+        git push origin ${{ steps.bump.outputs.version }}
+
+    - name: Set final version
+      id: version
+      run: |
+        if [ -n "${{ steps.existing_tag.outputs.tag }}" ]; then
+          echo "version=${{ steps.existing_tag.outputs.tag }}" >> $GITHUB_OUTPUT
+        else
+          echo "version=${{ steps.bump.outputs.version }}" >> $GITHUB_OUTPUT
+        fi
 
     - name: Login to Dockerhub
       uses: docker/login-action@v3
@@ -22,19 +68,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-    - name: Extract metadata tags for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ secrets.DOCKER_USERNAME }}/canadianelections
-        tags: |
-          type=semver,pattern={{version}} # e.g., 1.0.0
-          type=semver,pattern={{major}}.{{minor}} # e.g., 1.0
-          type=semver,pattern={{major}} # e.g., 1
-    
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.bump.outputs.version }}
