--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -74,9 +74,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: |
-          if [ -n "${{ steps.existing_tag.outputs.tag }}" ]; then
-            docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.existing_tag.outputs.tag }}
-          else
-            docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.bump.outputs.version }}
-          fi
+        tags: docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.bump.outputs.version }}
