--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -74,4 +74,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.bump.outputs.version }}
+        tags: docker.io/${{ secrets.DOCKER_USERNAME }}/canadianelections:${{ steps.version.outputs.version }}
