Made 1867.html the default page, removed the 404.html file.

--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         root   /usr/share/nginx/html/pages;
-        index main/404.html;
+        index elections/1867.html;
     }
 }
