Redirect any traffic going to the root canadianelections.net URL to the 1867.html page.

--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         root   /usr/share/nginx/html/pages;
-        index elections/1867.html;
+        return 301 elections/1867.html;
     }
 }
